--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/themes": "^3.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
+    "firebase": "^10.12.3",
     "fluent-ffmpeg": "^2.1.2",
     "franc": "^6.2.0",
     "langdetect": "^0.2.1",
@@ -30,10 +32,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "react-use": "^17.5.0",
+    "reactjs-popup": "^2.0.6",
     "speaker": "^0.5.4",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
